--- a/app/scss/components/_info.scss
+++ b/app/scss/components/_info.scss
@@ -2,10 +2,10 @@
 	background-color: rgba($white, 0.95);
 	position: absolute;
 	overflow-y: scroll;
-	width: 95%;
 	top: 100%;
-	left: 7px;
-	bottom: 5px;
+	left: 6px;
+	right: 4px;
+	bottom: 1px;
 	padding: 80px 10px 10px 10px;
 	transition: all 0.5s;
 	font-family: $body-font;
@@ -19,6 +19,7 @@
 
 	nav ul {
 		list-style-type: none;
+		padding-left: 0;
 
 		li {
 			margin-bottom: 5px;
@@ -27,7 +28,7 @@
 }
 
 .info.show {
-	top: 5px;
+	top: 3px;
 	cursor: auto;
 }
 
